Only write_hdf5 is left

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -206,8 +206,86 @@ simulation but at different times/scale factors/redshifts:
 
 ### Unit systems {#sec:unit-systems}
 
-As noted above, the default unit system in `yt` for almost all datasets is the Gaussian CGS system.
+As noted above, the default unit system in `yt` for almost all `Dataset`s is the Gaussian CGS system. However, `yt` also includes other unit systems which can be specified, in which case all fields loaded from a `Dataset` will be converted from their code units to this set of units. The available unit systems in `yt` are:
 
+* `"cgs"`: "Gaussian" centimeter-grams-seconds
+* `"mks"`: The SI unit system, or meters-kilograms-seconds-amperes
+* `"imperial"`: The "imperial" unit system, or the "US customary" system, incorporating miles, pounds, 
+  seconds, etc.
+* `"galactic"`: A unit system appropriate for studies of systems on galactic or extragalactic scales, 
+  with length units of kiloparsecs, mass units of solar masses, and time units of megayears, etc.
+* `"solar"`: A unit system appropriate for solar system objects, with length units of astronomical units, 
+  mass units of Earth mass, and time units of years. 
+* `"geometrized"`: A unit system appropriate for general relativistic calculations, in which 
+  $G$ = $c$ = 1. 
+* `"planck"`: A unit system in Planck units where $G$ = $c$ = $\hbar$ = $k_B$ = 1.
+
+Additionally, each `Dataset` instance has its own `"code"` unit system.
+
+To load a dataset with a different unit system, simply pass a valid value to the `unit_system`
+keywoard argument when calling `yt.load`:
+
+```python
+>>> import yt 
+>>> ds = yt.load("Enzo_64/DD0043/data0043", unit_system="mks")
+>>> dd = ds.all_data()
+>>> print(dd["gas","density"])
+[1.92555234e-28 1.74617139e-28 2.54742946e-28 ... 2.59560386e-25
+ 1.61728874e-25 1.22032913e-25] kg/m**3
+>>> ds2 = yt.load("Enzo_64/DD0043/data0043", unit_system="galactic")
+>>> dd2 = ds2.all_data()
+>>> print(dd2["gas","density"])
+[2.84511447e+00 2.58006879e+00 3.76397373e+00 ... 3.83515418e+03
+ 2.38963725e+03 1.80310657e+03] Msun/kpc**3
+>>> ds3 = yt.load("Enzo_64/DD0043/data0043", unit_system="code")
+>>> dd3 = ds3.all_data()
+>>> print(dd3["gas","density"])
+[6.74992726e-02 6.12111635e-02 8.92988636e-02 ... 9.09875931e+01
+ 5.66932465e+01 4.27780263e+01] code_mass/code_length**3
+```
+
+At the time of writing, two frontends in `yt` use the `"mks"` unit system by default, 
+and one leaves the units in "code" units by default. 
+
+It is also possible to define a new unit system entirely, with required arguments of a
+name for the system, and length, mass, time, temperature, and angular units: 
+
+```python
+>>> from unyt import UnitSystem
+>>> atomic_unit_system = UnitSystem('atomic', 'nm', 'mp', 'fs', 'nK', 'rad')
+>>> atomic_unit_system['energy'] = 'eV'
+>>> atomic_unit_system
+atomic Unit System
+ Base Units:
+  length: nm
+  mass: mp
+  time: fs
+  temperature: nK
+  angle: rad
+  current_mks: A
+  luminous_intensity: cd
+  logarithmic: Np
+ Other Units:
+  energy: eV
+>>> print(atomic_unit_system)
+atomic
+>>> atomic_unit_system['number_density']
+nm**(-3)
+>>> atomic_unit_system['angular_momentum']
+mp*nm**2/fs
+```
+
+Note that for dimensions not specified explicitly in the call to `UnitSystem` (in this example
+number density and angular momentum), their units were derived automatically. Now, this
+user-defined unit system can be used in `yt`:
+
+```python
+>>> ds4 = yt.load("Enzo_64/DD0043/data0043", unit_system="atomic")
+>>> dd4 = ds4.all_data()
+>>> print(dd4["gas","density"])
+[1.15045218e-28 1.04327815e-28 1.52200266e-28 ... 1.55078523e-25
+ 9.66275139e-26 7.29105244e-26] mp/nm**3
+```
 
 ### Unit conversions {#sec:unit-conversions}
 
@@ -231,6 +309,23 @@ the same dimension. Creating a new array or quantity from an existing one can be
 >>> print(sp["gas","pressure"].to("J/m**3"))
 [1.62223415e-11 1.60880725e-11 1.62334618e-11 ... 1.54101079e-11
  1.52756530e-11 1.53220436e-11] J/m**3
+```
+
+Conversions to other unit systems can also be achieved with the methods `in_cgs` for Gaussian CGS
+units, `in_mks` for SI units, and the more general `in_base` for conversion to any valid unit
+system (see ). 
+
+```python
+>>> import unyt as u 
+>>> import numpy as np
+>>> l = np.array([10, 100, 100])*u.Mpc
+>>> print(l.in_cgs())
+[3.08567758e+25 3.08567758e+26 3.08567758e+26] cm
+>>> print(l.in_mks())
+[3.08567758e+23 3.08567758e+24 3.08567758e+24] m
+>>> print(l.in_base("imperial"))
+[1.01236141e+24 1.01236141e+25 1.01236141e+25] ft
+>>> print(l.in_base("geometrized"))
 ```
 
 To convert an array in-place instead of making a copy, use `convert_to_units`:
