Fix section link

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -313,7 +313,7 @@ the same dimension. Creating a new array or quantity from an existing one can be
 
 Conversions to other unit systems can also be achieved with the methods `in_cgs` for Gaussian CGS
 units, `in_mks` for SI units, and the more general `in_base` for conversion to any valid unit
-system (see ). 
+system (see [Unit systems](#sec:unit-systems)). 
 
 ```python
 >>> import unyt as u 
