Responding to Clement's comments

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -6,14 +6,14 @@ perform dimensional analysis on the simulation data, adding additional opportuni
 errors in a data processing pipeline. In addition, it becomes straightforward to convert data from
 one unit system to another.
 
-In `yt` 4.0 we handle units in a an automatic fashion, with a symbolic units system. Originally part
+In `yt` 4.0 we handle units in an automatic fashion, with a symbolic units system. Originally part
 of `yt` itself since version 3.0, the unit system has now been split off into a standalone package,
-`unyt`. `unyt` leverages the symbolic math library `sympy` in combination with NumPy. In what
+`unyt` [@doi:10.21105/joss.00809]. `unyt` leverages the symbolic math library `sympy` in combination with NumPy. In what
 follows, we will refer to `unyt` when describing the unit implementation, unless we are describing a
 `yt`-specific extension.
 
 Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, we return a
-`unyt_array`, a subclass of `ndarray`. `unyt_array` preserves `ndarray`'s array operations,
+`unyt_array`, a subclass of `ndarray`. `unyt_array` preserves `ndarray`'s array interface,
 including deep and shallow copies, broadcasting, views, and mathematical operations. Augmenting
 `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit
 consistency in arithmetic operations between `unyt_array` instances, and making it trivial to
@@ -39,7 +39,7 @@ One of the nicest aspects of the unit system is that the symbolic algebra for un
 
 `unyt_array` is primarily useful for attaching units to NumPy `ndarray` instances. For scalar data,
 we have created the `unyt_quantity` class. `unyt_quantity` is a subclass of `unyt_array` with the
-requirement that the "array data" associated with the instance be limited to one element.
+requirement that the "array data" associated with the instance is a single scalar value. 
 `unyt_quantity` is primarily useful for physical constants and ensures that the units are propagated
 correctly when composing quantities from arrays, physical constants, and unitless scalars:
 
@@ -117,7 +117,7 @@ symbols with and without prefixes and modify the conversion factor appropriately
 
 We construct a `Unit` object by providing a string containing atomic unit symbols, combined with operations in Python syntax, and the registry those atomic unit symbols are defined in. We use
 `sympy`'s string parsing features to create the unit expression from the user-provided string. Each `Unit`
-object also has its own unit `sympy` `Expression` object, a dimensionality `Expression` object, a `UnitRegistry` instance, a scalar conversion factor to SI units, additive offset value, and display representation. Among other methods, `Unit` defines the `mul`, `div`, `pow`, and `eq` operations with
+object also has its own unit `sympy` `Expr` object, a dimensionality `Expr` object, a `UnitRegistry` instance, a scalar conversion factor to SI units, additive offset value, and display representation. Among other methods, `Unit` defines the `mul`, `div`, `pow`, and `eq` operations with
 other unit objects, making it easy to compose compound units algebraically.
 
 The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to
