Adding physical constants subsection

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -496,6 +496,46 @@ unyt.exceptions.UnitConversionError: Cannot convert between 'A/m**3' (dim '(curr
 For these cases, it is recommended to convert atomic electromagnetic units separately first in
 equations, if necessary.
 
+### Physical Constants
+
+`unyt` contains a large number of built-in physical constants and 
+properties of astronomical objects as `unyt_quantity` instances, which
+can be used in computations. The simplest way to use them is to import
+them directly from the `unyt` namespace:
+
+```python
+>>> from unyt import clight, kboltz, h, Mearth, G
+>>> for const in [clight, kboltz, h, Mearth, G]:
+...     print(const)
+299792458.0 m/s
+1.3806488e-23 kg*m**2/(K*s**2)
+6.62606957e-34 kg*m**2/s
+6.045644495102106e+24 kg
+6.67408e-11 m**3/(kg*s**2)
+```
+
+Here's an example of using constants in a computation:
+```python
+>>> import numpy as np
+>>> from unyt import unyt_quantity
+>>> from unyt import Msun, G
+>>> d = unyt_quantity(1.0, "AU")
+>>> T = np.sqrt(4.0*np.pi**2*d**3/(G*Msun)) # Kepler's third law
+>>> print(T.to("yr"))
+1.000033863000043 yr
+```
+
+Some physical constants are represented by Greek letters or other characters--these can be imported either using ASCII characters or
+their non-ASCII representations:
+
+```python
+>>> from unyt import σ_T, ε_0
+>>> print(ε_0)
+8.854187817620389e-12 A**2*s**4/(kg*m**3)
+>>> print(σ_T)
+6.65245854533e-29 m**2
+```
+
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
 Aside from converting an array to new units as described above, there are two further ways to create
