Apply suggestions from code review
Co-authored-by: Clément Robert <cr52@protonmail.com>

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -2,7 +2,7 @@
 
 At a basic level, `yt` is an engine for converting data created by a simulation code into a
 physically meaningful result. Attaching physical units to simulation data makes it possible to
-perform dimensional analysis on the simulation data, adding additional opportunities for catching
+perform dimensional analysis on the simulation data, adding new opportunities for catching
 errors in a data processing pipeline. In addition, it becomes straightforward to convert data from
 one unit system to another.
 
@@ -97,7 +97,7 @@ dimensions of `Msun / Mpc**3` are `mass / length**3` and the CGS conversion fact
 \times 10^{-41}$.
 
 We use the `UnitRegistry` class to define all valid atomic units. All unit registries contain a unit
-symbol lookup table (in a Python `OrderedDict`) containing for each unit in a tuple the conversion factor to SI units, the dimensionality, the additive offset for the unit, a string representing how the unit should be displayed in plots and other media, and a boolean dictating whether the unit is SI-prefixable. 
+symbol lookup table containing for each unit in a tuple the conversion factor to SI units, the dimensionality, the additive offset for the unit, a string representing how the unit should be displayed in plots and other media, and a boolean dictating whether the unit is SI-prefixable. 
 Here is what it would look like with the above units:
 
 ```python
@@ -120,12 +120,12 @@ We construct a `Unit` object by providing a string containing atomic unit symbol
 object also has its own unit `sympy` `Expr` object, a dimensionality `Expr` object, a `UnitRegistry` instance, a scalar conversion factor to SI units, additive offset value, and display representation. Among other methods, `Unit` defines the `mul`, `div`, `pow`, and `eq` operations with
 other unit objects, making it easy to compose compound units algebraically.
 
-The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to
-add, remove, and modify atomic unit definitions present in `UnitRegistry` objects. In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata. Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
+The `UnitRegistry` class provides methods which allows users to
+`add`, `remove`, and `modify` atomic unit definitions present in `UnitRegistry` objects. In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata. Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
 
 #### Code units {#sec:code-units}
 
-When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry`
+When a `Dataset` object is created, it will itself instantiate and set up a `UnitRegistry`
 class (stored in its `unit_registry` attribute) that contains a full set of units that are defined
 for the simulation. This registry includes not only the aforementioned concrete physical units like
 `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the
@@ -174,7 +174,7 @@ When code units are set up for a `Dataset`, `unyt_quantity` instances correspond
 5.555172850264421e+26 cm
 ```
 
-Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, and `magnetic_unit` may be defined as well,if the units for these fields cannot be inferred from the mass, length, and time units.
+Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, and `magnetic_unit` may be defined as well, if the units for these fields cannot be inferred from the mass, length, and time units.
 
 #### Handling cosmological units {#sec:handling-cosmological-units}
 
@@ -344,7 +344,7 @@ To convert an array in-place instead of making a copy, use `convert_to_units`:
 Naturally, attempting to convert an array to units with a different dimension raises an error (in
 most cases, see below for exceptions):
 
-```python
+```python-traceback
 >>> print(momentum_y.to("degC"))
 Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
@@ -392,7 +392,7 @@ and the equivalence you would like to use:
 0.00132141 pm
 ```
 
-These equivalencies are straightforward--in the case of others, more information may be required.
+These equivalencies are straightforward--more information may be required in other cases.
 For example, to convert temperature to sound speed via $c_s = \sqrt{\gamma{k_BT}/(\mu{m_p})}$, there
 are two parameters which may be optionally changed, $\gamma$ and $\mu$, which are the ratio of
 specific heats and the mean molecular weight, respectively:
@@ -506,7 +506,7 @@ them directly from the `unyt` namespace:
 ```python
 >>> from unyt import clight, kboltz, h, Mearth, G
 >>> for const in [clight, kboltz, h, Mearth, G]:
-...     print(const)
+...    print(const)
 299792458.0 m/s
 1.3806488e-23 kg*m**2/(K*s**2)
 6.62606957e-34 kg*m**2/s
@@ -564,7 +564,7 @@ unyt_quantity(3, 'J')
 ```
 
 In addition to the class constructor, we have also defined two convenience functions, `quan`, and
-`arr`, for quantity and array creation that are attached to the `Dataset` base class. These were
+`arr`, for quantity and array creation that are attached to the `Dataset` class. These were
 added to syntactically simplify the creation of arrays with the `UnitRegistry` instance associated
 with a dataset. These functions work exactly like the `unyt_array` and `unyt_quantity` constructors,
 but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call. For
@@ -577,7 +577,7 @@ example:
 unyt_array([5.55e+26, 1.11e+27, 1.66e+27], 'cm')
 ```
 
-This example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry` in `yt`.
+The above example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry` in `yt`.
 
 #### Multiplication {#sec:multiplication}
 
