Add some examples of ASCII/non-ASCII

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -344,7 +344,7 @@ To convert an array in-place instead of making a copy, use `convert_to_units`:
 Naturally, attempting to convert an array to units with a different dimension raises an error (in
 most cases, see below for exceptions):
 
-```python-traceback
+```python
 >>> print(momentum_y.to("degC"))
 Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
@@ -530,10 +530,13 @@ their non-ASCII representations:
 
 ```python
 >>> from unyt import σ_T, ε_0
->>> print(ε_0)
+>>> from unyt import eps_0, sigma_thomson # ASCII versions
+>>> print(ε_0) # This is the vacuum permittivity constant
 8.854187817620389e-12 A**2*s**4/(kg*m**3)
->>> print(σ_T)
+>>> print(σ_T) # This is the Thomson cross section
 6.65245854533e-29 m**2
+>>> print(σ_T == sigma_thomson)
+True
 ```
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
