Add section on yt_idv

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -168,4 +168,23 @@ This particular set of transfer functions, with what amounts to multi-channel, m
 
 ### Hardware-accelerated Volume Rendering
 
+Software volume rendering, as described above, provides a number of affordances for careful visualization.
+Specifically, as the code and kernels are written in languages that are similar to more traditional languages such as C and C++, the barrier to entry for describing a new sampling system can be lower.
+That being said, when examining responsiveness, software volume rendering is rarely -- if ever -- competitive with hardware-based volume rendering, such as that accelerated through graphics processing units (GPUs) and using OpenGL, Metal, Vulkan, or one of the higher-level platforms for graphics.
+Fluid interactivity is essentially inaccessible for software volume rendering except on the smallest of datasets.
+And yet, fluid interactivity enables much deeper exploration of the parameter space of visualization, as well as the ability to immerse oneself in data.
 
+To support more interactive visualization (in addition to that described in @sec:jupyter_integration) a basic system for conducting hardware-accelerate, OpenGL-based visualization of `yt`-supported data has been developed in an external package, [`yt_idv`](https://github.com/yt-project/yt_idv/).
+`yt_idv` is built on `PyOpenGL` and provides support for grid-based, particle-based and finite element datasets, with a heavy emphasis on the grid-based datasets.
+While the process of volume rendering is interesting, with many different fascinating areas of inquiry and opportunities for optimization, `yt_idv` is notable for its architecture more than its algorithms and optimization.
+
+`yt_idv` is built using the Traitlets library, and utilizes the immediate-mode graphical user interface system "Dear ImGUI" for presentign a user interface.
+This allows for the system to be largely data-driven; frame redraws are only executed when a parameter changes (such as the camera path, transfer function, etc) and new parameters for the visualization can be easily exposed to the user interface.
+Furthermore, this allows shaders to be dynamically recompiled only as necessary.
+
+In addition to this, the shaders themselves are specified in a configuration file, and they are designed for interoperability.
+For ray-casting routines, only a small kernel needs to be modified to change the functionality.
+This allows the relatively complex process of casting rays through multiple volumes to be hidden, much as described in @sec:software-volume-rendering.
+Annotations can be added simply, and an event loop has been enabled so that users can interact with the running visualization interface through IPython.
+
+While this project includes a number of additional features designed for accessibility of data and in-depth coupling of visualization with quantitative analysis, they extend beyond the scope of this paper.
