--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -75,7 +75,7 @@ When loading a dataset, yt will attempt to determine what the format of the data
 
 While these may seem like simple, obvious changes to make, they can hide difficult technical challenges, and more importantly, have dramatically improved the user experience for people using yt.
 
-### Jupyter Integration
+### Jupyter Integration {#sec:jupyter_integrationt}
 
 Project Jupyter is an overarching term for a collection of related projects that provide an extensive, end-to-end suite for the user experience of developing code and narrative, as described in depth in (among other papers) @doi:10.1109/MCSE.2021.3059263 and @soton403913.
 While many in the yt community utilize yt through python scripts executed on the command line or through submission queues on high-performance computing resources, a large fraction utilize Jupyter Notebooks for their data exploration.
