--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -182,7 +182,7 @@ While the process of volume rendering is interesting, with many different fascin
 This allows for the system to be largely data-driven; frame redraws are only executed when a parameter changes (such as the camera path, transfer function, etc) and new parameters for the visualization can be easily exposed to the user interface.
 Furthermore, this allows shaders to be dynamically recompiled only as necessary.
 
-In addition to this, the shaders themselves are specified in a configuration file, and they are designed for interoperability.
+In addition to this, the shaders themselves are specified in a configuration file that links GLSL source files into multi-component shaders, allowing declarative construction of shader pipelines and improving interoperability.
 For ray-casting routines, only a small kernel needs to be modified to change the functionality.
 This allows the relatively complex process of casting rays through multiple volumes to be hidden, much as described in @sec:software-volume-rendering.
 Annotations can be added simply, and an event loop has been enabled so that users can interact with the running visualization interface through IPython.
