Stub out some future directions

--- a/content/68.future_directions.md
+++ b/content/68.future_directions.md
@@ -1,1 +1,10 @@
 ## Future Directions
+
+- More integration with _in situ_ analysis systems like `libyt`
+- Much improved optimization
+- Integration with other domains besides astronomy
+- Refactoring for the long term
+- Static typing
+- Improving visual representation of `yt` objects
+- Testing infrastructure
+- Integration with external libraries such as pytorch-spatial, etc
