Fix authors and fix reference

--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -26,7 +26,7 @@ In its original implementation of parallelism, yt utilized a single, global MPI 
 This had the advantage of (counter-intuitively) not requiring a global state be tracked; however, it also greatly limited the degree to which tasks could be distributed.
 Current versions of yt now implement a stack-based approach to MPI communicators, where subsets of MPI tasks are assigned to different collective operations.
 
-For example, when conducting halo finding and analysis (see @sec:halo-finding) yt can parallelize in groups of MPI tasks _across_ halos, and then decompose the work _within_ a given halo across MPI tasks inside that communicator.
+For example, when conducting halo finding and analysis (see @sec:halo_finding) yt can parallelize in groups of MPI tasks *across* halos, and then decompose the work *within* a given halo across MPI tasks inside that communicator.
 This takes place by specifying a task size at the top level (or allowing yt's internal heuristics to determine it) and then distributing work to sub-communicators, each of which is then used for decomposition inside that top-level task.
 
 In addition to multi-level communicators, yt utilizes OpenMP constructs exposed in Cython in several places.
